--- a/plomero.html
+++ b/plomero.html
@@ -13,33 +13,46 @@
 
   <!-- Favicon -->
   <link rel="icon" href="img/logopestaña.png" type="image/png">
+
+
+
 </head>
 
 <body>
-
+<div class="texto-emergencia" id="emergencia">
+    🚨 EMERGENCIAS 24HS <br>    ATENCIÓN INMEDIATA 🚨
+  </div>
+ 
   <!-- Header / Hero -->
 <!-- Header / Hero -->
 <header class="bg-primary text-white text-center py-5">
   <div class="container">
     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
       <!-- Logo -->
-      <img src="img/logo.png" alt="Logo Aqua Soluciones" style="height:200px; width:auto;" class="me-md-3 mb-3 mb-md-0">
+    
+      <img src="img/logo.png" alt="Logo Aqua Soluciones" style="height:200px; width:auto;"  class="logo me-md-3 mb-3 mb-md-0">
+
+
       
       <!-- Títulos -->
       <div>
+
         <h1 class="fw-bold mb-1">AQUA SOLUCIONES</h1>
         <p class="lead mb-0">Plomería / Instalaciones / Destapaciones</p>
-        <h2 class="fw-bold mb-1">SERVICIO 24HS</h2>
+    <h2 class="fw-bold mb-1 text-warning">SERVICIO 24HS</h2>
+
+
       </div>
     </div>
-  </div>
+ 
+
 </header>
 
 
-  <!-- Sección de Servicios -->
-  <section class="seccion-fondo">
 
-<section class="container my-5">
+  <!-- Sección de Servicios -->
+  <section class="seccion-fondo py-5">
+    <div class="container my-5">
   <h2 class="textoservicios">Nuestros Servicios</h2>
   <div class="row g-4">
 
@@ -110,7 +123,7 @@
     </div>
   </div>
 </div>
-
+</div>
 </section>
 
 <!-- Sección: Por qué confiar en nosotros -->
@@ -131,10 +144,10 @@
       <h5 class="text-secondary mb-3">Aceptamos todos los medios de pago</h5>
       <!-- Logos simulados (reemplazar src por logos reales si los tenés) -->
       <div class="d-flex justify-content-center flex-wrap gap-3">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" alt="Visa" width="60">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Mastercard-logo.png" alt="Mastercard" width="60">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/MercadoPago_Logo.png" alt="Mercado Pago" width="60">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Logo_Cabal.svg/512px-Logo_Cabal.svg.png" alt="Cabal" width="60">
+        <img src="img/logovisa.png" alt="Visa" width="60">
+        <img src="img/logomaster.png" alt="Mastercard" width="60">
+        <img src="img/logomp.png" alt="Mercado Pago" width="60">
+        <img src="img/logomodo.png" alt="Modo" width="60">
         <!-- Agrega más logos si querés -->
       </div>
     </div>
@@ -173,5 +186,15 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<a href="https://wa.me/5491160012313?text=Hola%20necesito%20una%20emergencia%20de%20plomería"
+   class="whatsapp-flotante d-flex align-items-center gap-2 px-3"
+   target="_blank"
+   aria-label="WhatsApp">
+  <i class="bi bi-whatsapp"></i>
+  <span class="fw-bold text-white">¡COMUNICATE CON NOSOTROS!</span>
+</a>
+
+
+
 </body>
 </html>
